--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body{
 .tarjeta-de-dino{
     width:220px;
     height:120px;
-    background-color: #00000050;
+    background-color: #000000ab;
     padding:10px;
     box-sizing:border-box;
     border-radius:20px;
@@ -51,7 +51,6 @@ body{
 .tarjeta-de-dino > img{
     width:100px;
     height:100px;
-    background-color: #227C70;
     box-sizing:border-box;
     border-radius:20px;
     color:#fff;
@@ -147,6 +146,18 @@ input:checked + label{
     display:flex;
     flex-direction: column;
     align-items: center;
+}
+
+#ver-mapa{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#mapa{
+    border: 2px solid #fff;
+    border-radius:10px;
+
 }
 
 @media (max-width: 360px){
